compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_type_duplicate_with_as.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "import one.{type One as MyOne, type One as MyOne}\n\npub fn main() -> One {\n  todo\n}\n"
---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{type One as MyOne, type One as MyOne}
  │             ^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^ Redefined here
  │             │                   
  │             First defined here

The type `MyOne` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
